# microTPCsample

./: .gitignore
analysis/: CMakeLists.txt  Readme.md  SIMULATION_ANALYSIS_REVIEW.md
analysis/include/: Config.h  LinkDef.h
analysis/include/Algorithm/: AlgorithmFactory.h  AnalysisUtils.h  DeconvCuts.h  IAlgorithm.h  WaveformAnalysis.h
analysis/include/Algorithm/algorithms/: ClusterBuilder.h  ClusterReconstructor.h  WaveformProcessor.h
analysis/include/Detector/: BadStripMask.h  Cylinder.h  Detector.h  DetectorFactory.h  Planar.h
analysis/include/Event/: DataModel.h  DetectorFrame.h  EventDisplayManager.h
analysis/include/Script/: BadStripScript.h  ChannelNoiseScript.h  DUTAnalysisScript.h  DeconvAnalysisScript.h  ExampleScript.h  RawWaveformDumpScript.h  TrackAnalysisScript.h
analysis/include/Script/Base/: IScript.h  RawDataParser.h  ScriptFactory.h  ScriptManager.h
analysis/src/: lambda_scan.C  main.cpp  simulationanalysis.C  test.C
analysis/src/Algorithm/: AlgorithmFactory.cpp  AnalysisUtils.cpp  WaveformAnalysis.cpp
analysis/src/Algorithm/algorithms/: ClusterBuilder.cpp  ClusterReconstructor.cpp  WaveformProcessor.cpp
analysis/src/Detector/: Cylinder.cpp  Detector.cpp  DetectorFactory.cpp  Planar.cpp
analysis/src/Event/: DetectorFrame.cpp  EventDisplay.cpp
analysis/src/Script/: BadStripScript.cpp  ChannelNoiseScript.cpp  DUTAnalysisScript.cpp  DeconvAnalysisScript.cpp  ExampleScript.cpp  RawWaveformDumpScript.cpp  TrackAnalysisScript.cpp
analysis/src/Script/Base/: RawDataParser.cpp  ScriptFactory.cpp  ScriptManager.cpp
simulation/: CMakeLists.txt  Electron.h  ElectronLinkDef.h  SIMULATION_WORKFLOW.md  microTPC.C  microTPCsimulation.C
simulation/analysis/: buildSampleLibrary.C  matix.C  mean.C  merge.C
